--- a/Server/src/CoreWeb1/Modules/Home/Views/Index.cshtml
+++ b/Server/src/CoreWeb1/Modules/Home/Views/Index.cshtml
@@ -5,6 +5,7 @@
 		<hr />
 		<p>Your server is up and running. The time is @DateTime.UtcNow.TimeOfDay.ToString() UTC.</p>
 		<br/>
-		<a href="http://nicholasventimiglia.com">Support</a>
+		<a href="http://nicholasventimiglia.com">Nicholas Ventimiglia</a>
+		<a href="https://github.com/NVentimiglia/DotNetCoreUnity3d">Project Github</a>
 	</div>
 </div>
