--- a/Server/src/CoreWeb1/Views/Home/Index.cshtml
+++ b/Server/src/CoreWeb1/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
-@using System
 <div class="row">
 	<div class="col-md-3">
 		<h2>Welcome</h2>
 		<hr />
-		<p>Your server is up and running. The time is @DateTime.UtcNow.TimeOfDay.ToString() UTC.</p>
+		<p>Your server is up and running. The time is @System.DateTime.UtcNow.TimeOfDay.ToString() UTC.</p>
 		<br/>
 		<a href="http://nicholasventimiglia.com">Nicholas Ventimiglia</a>
 		<a href="https://github.com/NVentimiglia/DotNetCoreUnity3d">Project Github</a>
